@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-31T16:32:29Z",
+  "timestamp" : "2022-11-01T02:20:24Z",
   "count_outdated" : 204,
   "uniques_outdated" : 67,
   "count" : 236,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
