@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
